# puck-sim

./: .gitignore  DESIGN.md  DEVPLAN.md  README.md  dev.sh  pyproject.toml
docs/: PARITY_PLAN.md  PLAYER_RATINGS.md  PROSPECT_DEV_PLAN.md  SIM_SYNERGY_PLAN.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  PlayerModal.tsx  api.ts  index.css  main.tsx  theme.tsx  ui.tsx  vite-env.d.ts
pucksim/: config.py  rng.py
pucksim/models/: attributes.py  coach.py  contract.py  draft.py  league.py  player.py  stats.py  tactics.py  team.py  world.py
pucksim/save/: serialize.py  store.py
pucksim/sim/: boxscore.py  engine.py  goalies.py  playoffs.py  power.py  ratings.py  season.py  special_teams.py
testkit/: run_season.py
tests/: test_attributes.py  test_awards.py  test_cap.py  test_clutch.py  test_coach.py  test_coach_line_juggling.py  test_config.py  test_contract.py  test_defender_suppression.py  test_development.py  test_draft.py  test_draft_system.py  test_econ_balance.py  test_engine.py  test_expected_goals.py  test_faceoffs.py  test_freeagency.py  test_generation.py  test_gk_puckhandling.py  test_goalie_form_integration.py  test_goalies.py  test_hitting.py  test_injuries.py  test_league.py  test_legacy.py  test_line_synergy.py  test_momentum.py  test_offseason.py  test_ot_shootout.py  test_player.py  test_playoffs.py  test_power.py  test_prospects.py  test_rebounds.py  test_rng.py  test_save.py  test_season.py  test_shot_blocking.py  test_skating_rush.py  test_special_teams.py  (+14 more)
(+33 files in other folders)
